<resources>
    <string name="app_name">LostnFound</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="lost_n_found">Lost n Found</string>
    <string name="otras_opciones">Otras opciones</string>
    <string name="logout">Logout</string>
    <string name="descripcion_del_objeto">Descripcion_del_objeto</string>
    <string name="objeto">Objeto</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_tienes_una_cuenta_registrate">No tienes una cuenta? Registrate!</string>
    <string name="objetos_perdidos">Objetos Perdidos</string>
    <string name="mis_objetos">Mis objetos</string>
    <string name="favoritos">Favoritos</string>
    <string name="nueva_cuenta">Nueva Cuenta</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="nuevo_post">Nuevo post</string>
    <string name="configuracion_de_cuenta">Configuracion de cuenta</string>
    <string name="create_account">Crear Cuenta</string>
    <string name="titulo">Titulo</string>
    <string name="fecha">Fecha</string>
    <string name="fecha_noticia">Fecha noticia</string>
    <string name="usuario">Usuario</string>
    <string name="usename">Usename</string>
    <string name="descripcion_objeto">Descripcion Objeto</string>
    <string name="actualizacion_de_cuenta">Actualizacion de Cuenta</string>
    <string name="actualizar_usuario">Actualizar Usuario</string>
    <string name="actualizar_cuenta">Actualizar Cuenta</string>
    <string name="direccion1">Direccion</string>
    <string name="lugar">lugar</string>
    <string name="fecha_de_noticia">fecha_de_noticia</string>
    <string name="fecha2">Fecha</string>
    <string name="usuario2">Usuario</string>
    <string name="direccion2">Direccion</string>
    <string name="direccioninfo">Direccion</string>
    <string name="newdescripcion">Descripcion</string>
    <string name="newtitulo">Titulo</string>
    <string name="crear_noticia">Crear Noticia</string>
</resources>
