<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/objetos_perdidos" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_color_lens_black_24dp"
            android:title="@string/mis_objetos" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favoritos" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_add_circle_black_24dp"
            android:title="@string/nuevo_post" />
    </group>

    <item android:title="@string/otras_opciones">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_do_not_disturb_black_24dp"
                android:title="@string/logout" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_vpn_key_black_24dp"
                android:title="@string/actualizacion_de_cuenta" />
        </menu>
    </item>

</menu>
