<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Login"
    android:background="@drawable/splashscreen_color">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/login"
            android:textSize="50sp"
            android:gravity="center"
            android:textColor="#29B6F6"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#29B6F6"
                android:textColorHint="#29B6F6"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#29B6F6"
                android:textColorHint="#29B6F6"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/enviar"
            style="?android:textAppearanceSmall"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:textColor="#29B6F6"
            android:background="@drawable/button_color"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:id="@+id/Register"
            android:layout_marginTop="10dp"
            android:text="@string/no_tienes_una_cuenta_registrate"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="#29B6F6"/>

    </LinearLayout>

</LinearLayout>