<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.NewObject"
    tools:showIn="@layout/activity_new_object"
    android:background="@drawable/splashscreen_color">



    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ObjTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/newtitulo"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#29B6F6"
                android:textColorHint="#29B6F6"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <!--Letrero de fecha-->
                <TextView
                    android:background="#000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/ObjDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fecha2"
                        android:inputType="date"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="#29B6F6"
                        android:textColorHint="#29B6F6"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:background="#000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/usuario"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/ObjUsrn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:hint="@string/usuario2"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="#29B6F6"
                        android:textColorHint="#29B6F6"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </LinearLayout>


        <TextView
            android:background="#000"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/direccion2"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#fff"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"/>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ObjDir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/direccioninfo"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#29B6F6"
                android:textColorHint="#29B6F6"/>

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ObjDescr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/newdescripcion"
                android:singleLine="true"
                android:textColor="#29B6F6"
                android:textColorHint="#29B6F6"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/CreateObj"
            style="?android:textAppearanceSmall"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/crear_noticia"
            android:textStyle="bold"
            android:textColor="#29B6F6"
            android:background="@drawable/button_color"/>



    </LinearLayout>




</android.support.v4.widget.NestedScrollView>